[tool.poetry]
name = "data-completion-research"
version = "0.1.0"
description = "Scripts for completing a matrix or tensor with missing data."
authors = ["Kenneth <kencubed@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "data_completion_python" }]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
